# QtLegionBattery

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/gui/: CMakeLists.txt  batteryconfiguration.cpp  batteryconfiguration.h  batteryconfiguration.ui  batterystatus.cpp  batterystatus.h  batterystatus.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
